--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <body>
     <div class="container">
       <div class="blurb">
-        <h1>Hi there, I'm JeffreyE!</h1>
-        <p>This is still a work in progres...</p>
+        <h1>Hi there, I'm Jeffrey!</h1>
+        <p>This is still a work in progress...</p>
       </div>
     </div>
     <footer>
