--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1><strong>Hello! I am Jeffrey Pan.</strong>
-				<a href="http://html5up.net">HTML5 UP</a>.
 			</h1>
 		</div>
 	</header>
@@ -31,7 +30,7 @@
 		<!-- One -->
 		<section id="one">
 			<header class="major">
-				<h2>Welcome to my website! It's still a work in progress.</h2>
+				<h2>Welcome to my website! It's still a work in progress...</h2>
 			</header>
 			<p>I am currently a student at Vanderbilt University, pursuing a double major in Computer Science and
 				Mathematics. Throughout my years of programming experience, I have developed a strong proficiency in C++
@@ -448,10 +447,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://github.com/Ninjasafd" class="icon brands fa-github"><span class="label">Github</span></a></li>
+				<li><a href="https://www.linkedin.com/in/jeffrey-pan-a352491b5/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="mailto:JeffreyPan95@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Untitled</li>
