--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 		<!-- Three -->
 		<section id="three">
 			<h2>Get In Touch</h2>
-			<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu
-				lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+			<p>Reach out below</p>
 			<div class="row">
 				<div class="col-8 col-12-small">
 					<form method="post" action="#">
@@ -112,11 +111,11 @@
 						</li>
 						<li>
 							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-							000-000-0000
+							(484) 684 - 8280
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="#">hello@untitled.tld</a>
+							<a href="mailto:JeffreyPan95@gmail.com">JeffreyPan95@gmail.com</a>
 						</li>
 					</ul>
 				</div>
