--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/jeffrey-pan-a352491b5/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/Ninjasafd" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="mailto:JeffreyPan95@gmail.com" class="fa-voicemail"><span class="label">Mail</span></a></li>
+									<li><a href="mailto:JeffreyPan95@gmail.com" class="fa-envelope"><span class="label">Mail</span></a></li>
 								</ul>
 							</article>
 
