--- a/index.html
+++ b/index.html
@@ -5,98 +5,124 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Jeffrey Pan</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Jeffrey Pan - Portfolio</title>
+	<link rel="icon circle" type="image/png" href="images/space-rainbow-ico.ico">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-							<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-						<div class="content">
-							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
-							</ul>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Main -->
-					<div id="main">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-							</article>
+		<!-- Header -->
+		<header id="header">
+			<div class="relative rounded-full h-100 w-100 mx-auto overflow-hidden border">
+				<img src="images/space-rainbow-ico.ico" alt="drawn picture"
+					class="absolute inset-0 object-cover w-full h-full">
+			</div>
+			<div class="content">
+				<div class="inner">
+					<h2>Hello! I'm <span class="text-x1"> Jeffrey Pan </span></h2>
+					<p>Welcome to my website... It's still a work in progress</p>
+				</div>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#intro">About</a></li>
+					<li><a href="#experience">Experience</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<!--<li><a href="#elements">Elements</a></li>-->
+				</ul>
+			</nav>
+		</header>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-							</article>
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
+		<!-- Main -->
+		<!-- <div id="main"> -->
 
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/jeffrey-pan-a352491b5/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/Ninjasafd" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="mailto:JeffreyPan95@gmail.com" class="icon solid fa-envelope"><span class="label">Mail</span></a></li>
-								</ul>
-							</article>
+		<!-- Intro -->
+		<article id="intro">
+			<h2 class="major">Intro</h2>
+			<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+			<p>I am currently a student at Vanderbilt University, pursuing a double major in Computer Science and
+				Mathematics. Throughout my years of programming experience, I have developed a strong proficiency in C++
+				as my primary language, closely followed by Python. I am also well-versed in other languages such as
+				Java, JavaScript, and SQL.
 
-						<!-- Elements -->
+				</a>.</p>
+			<p>More details coming!</p>
+		</article>
+
+		<!-- Work -->
+		<article id="experience">
+			<h2 class="major">Work</h2>
+			<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+			<p>I have much experience in a lot of fields. More details coming soon.</p>
+		</article>
+
+		<!-- About -->
+		<article id="skills">
+			<h2 class="major">About</h2>
+			<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+			<p>Here are my skills!</p>
+		</article>
+
+		<!-- Contact -->
+		<article id="contact">
+			<h2 class="major">Contact</h2>
+			<form method="post" action="#">
+				<div class="fields">
+					<div class="field half">
+						<label for="name">Name</label>
+						<input type="text" name="name" id="name" />
+					</div>
+					<div class="field half">
+						<label for="email">Email</label>
+						<input type="text" name="email" id="email" />
+					</div>
+					<div class="field">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" rows="4"></textarea>
+					</div>
+				</div>
+				<ul class="actions">
+					<li><input type="submit" value="Send Message" class="primary" /></li>
+					<li><input type="reset" value="Reset" /></li>
+				</ul>
+			</form>
+			<ul class="icons">
+				<li><a href="https://www.linkedin.com/in/jeffrey-pan-a352491b5/" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/Ninjasafd" class="icon brands fa-github"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="mailto:JeffreyPan95@gmail.com" class="icon solid fa-envelope"><span
+							class="label">Mail</span></a></li>
+			</ul>
+		</article>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		<!--
 							<article id="elements">
 								<h2 class="major">Elements</h2>
 
@@ -338,24 +364,25 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 							</article>
 
-					</div>
+					<!-- </div> -->
 
-				<!-- Footer -->
-					<!-- <footer id="footer">
+		<!-- Footer -->
+		<!-- <footer id="footer">
 						<p class="copyright">&copy>HTML5 UP</a>.</p>
 					</footer> -->
 
-			</div>
+	</div>
 
-		<!-- BG -->
-			<div id="bg"></div>
+	<!-- BG -->
+	<div id="bg"></div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
