Edited About section

--- a/index.html
+++ b/index.html
@@ -50,17 +50,37 @@
 		<!-- <div id="main"> -->
 
 		<!-- Intro -->
-		<article id="intro">
-			<h2 class="major">Intro</h2>
-			<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-			<p>I am currently a student at Vanderbilt University, pursuing a double major in Computer Science and
-				Mathematics. Throughout my years of programming experience, I have developed a strong proficiency in C++
-				as my primary language, closely followed by Python. I am also well-versed in other languages such as
-				Java, JavaScript, and SQL.
 
-				</a>.</p>
-			<p>More details coming!</p>
+		<div class="space-before-about">
+			<h2 class="major">About</h2>
+		  </div>
+
+		<article id="intro">
+			<div class="container-split">
+				<div class="image-intro">
+					<img src="images/space-rainbow.jpg" alt="Intro Image" width="2400" height="1500">
+				</div>
+				<div class="content-split">
+					<p>Hello! I'm Jeffrey Pan, a senior studying Computer Science
+						& Mathematics at Vanderbilt University, while also working towards an M.S. in Computer Science.
+						I have diligently built a solid foundation in <span class="text-[#25b2da] uppercase">Full Stack
+							Development, artificial intelligence, and machine learning </span>
+						and I'm always excited to learn more! Recently, I've taken an interest in <span
+							class="text-[#25b2da] uppercase">Cybersecurity and Mobile Development</span>.
+
+					<p>I am driven by a constant desire to learn and grow, and I am always on the lookout for new
+						opportunities
+						to further develop my skills, both professionally and technically. My commitment and passion for
+						programming are evident in the projects, internships, and coursework I have undertaken so far.
+						The field of computer science is always full of possibilities, and I am eager to continue
+						nurturing my abilities to become a more knowledgeable and well-rounded programmer and person.
+				</div>
+			</div>
 		</article>
+
+
+
+
 
 		<!-- Work -->
 		<article id="experience">
