--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="sticky top-0 p-5 flex items-start justify-between max-w-7xl mx-auto z-20 xl:items-center">
 	<div class="flex flex-row items-center" style="opacity: 1; transform: none; text-decoration: none; "><a
 			href="https://github.com/Ninjasafd" class="social-icon" aria-label="github"
-			style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle; margin-right: 10px;">
+			style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle; margin-right: 2px;">
 			<div class="social-container" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; ">
 				<svg class="social-svg" viewBox="0 0 64 64"
 					style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;">
@@ -128,41 +128,21 @@
 		</div>
 
 		<article id="intro">
-			<div class="container-split fade">
-
-				<div class="flex flex-col relative h-screen text-center md:text-left md:flex-row max-w-7xl px-10 justify-evenly mx-auto items-center"
-					style="opacity: 1;">
-					<img src="images/space-rainbow.jpg"
-						class="-mb-20 md:mb-0 flex-shrink-0  h-56 rounded-full md:rounded-lg md:w-64 md:h-64 xl:w-[500px] xl:h-[500px]"
-						style="opacity: 1; transform: none;">
-					<div class="space-y-10 px-0 md:px-10">
-						<h4 class="text-4xl font-semibold">A <span class="underline decoration-[#20AAB1]/50">bit
-								of</span> background</h4>
-						<p class="text-med margin-right-long">Hello! I'm Jeffrey Pan, a senior studying Computer Science
-							& Mathematics at <a class="text-[#CFAE70]" href="https://www.vanderbilt.edu" target="_blank"
-								rel="noopener noreferrer">Vanderbilt University</a>, while also working towards an M.S.
-							in Computer Science.
-							I have diligently built a solid foundation in <span class="text-[#25b2da] uppercase">Full
-								Stack
-								Development, artificial intelligence, and machine learning </span>
-							and I'm always excited to learn more! Recently, I've taken an interest in <span
-								class="text-[#25b2da] uppercase">Cybersecurity and Mobile Development</span>.
-						<p class="text-med margin-right-long">I am driven by a constant desire to learn and grow, and I
-							am always on the lookout for new
-							opportunities
-							to further develop my skills, both professionally and technically. My commitment and passion
-							for
-							programming are evident in the projects, internships, and coursework I have undertaken so
-							far.
-							The field of computer science is always full of possibilities, and I am eager to continue
-							nurturing my abilities to become a more knowledgeable and well-rounded programmer and
-							person.
-						</p>
-					</div>
+			<div class="container-split fade flex flex-col">
+			  <div class="flex flex-col relative text-center md:text-left md:flex-row max-w-7xl px-10 justify-center items-center" style="opacity: 1;">
+				<div class="flex-shrink-0">
+				  <img src="images/space-rainbow.jpg" class="w-64 h-64 xl:w-[500px] xl:h-[500px] rounded-full md:rounded-lg" style="opacity: 1; transform: none; ">
 				</div>
-
+				<div class="space-y-10 px-0 md:px-10 text-center md:text-left">
+				  <h4 class="text-4xl font-semibold">A <span class="underline decoration-[#20AAB1]/50">bit of</span> background</h4>
+				  <p class="text-center md:text-med margin-right-long">Hello! I'm Jeffrey Pan, a senior studying Computer Science & Mathematics at <a class="text-[#CFAE70]" href="https://www.vanderbilt.edu" target="_blank" rel="noopener noreferrer">Vanderbilt University</a>, while also working towards an M.S. in Computer Science. I have diligently built a solid foundation in <span class="text-[#25b2da] uppercase">Full Stack Development, artificial intelligence, and machine learning</span> and I'm always excited to learn more! Recently, I've taken an interest in <span class="text-[#25b2da] uppercase">Cybersecurity and Mobile Development</span>.</p>
+				  <p class="text-center md:text-med margin-right-long">I am driven by a constant desire to learn and grow, and I am always on the lookout for new opportunities to further develop my skills, both professionally and technically. My commitment and passion for programming are evident in the projects, internships, and coursework I have undertaken so far. The field of computer science is always full of possibilities, and I am eager to continue nurturing my abilities to become a more knowledgeable and well-rounded programmer and person.</p>
+				</div>
+			  </div>
 			</div>
-		</article>
+		  </article>
+		  
+
 
 
 
@@ -245,7 +225,8 @@
 							src="https://cdn.sanity.io/images/o2zb0e1f/production/8b0429a7636a8fc6d0777055cf06a3986679e862-1869x2048.png"><img
 							class="h-8 w-8 rounded-full"
 							src="https://cdn.sanity.io/images/o2zb0e1f/production/68b9be602a95227490b5214a51e45bf42f5ad51f-1200x1200.png">
-							<img class="h-8 w-8 rounded-full" src="https://cdn.sanity.io/images/o2zb0e1f/production/98f8c6142120c10cf54cae263c3b575e2830b246-1822x2048.png">
+						<img class="h-8 w-8 rounded-full"
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/98f8c6142120c10cf54cae263c3b575e2830b246-1822x2048.png">
 					</div>
 					<p class="uppercase py-5 text-gray-300">January 2021 - Present</p>
 					<ul
