--- a/index.html
+++ b/index.html
@@ -129,19 +129,35 @@
 
 		<article id="intro">
 			<div class="container-split fade flex flex-col">
-			  <div class="flex flex-col relative text-center md:text-left md:flex-row max-w-7xl px-10 justify-center items-center" style="opacity: 1;">
-				<div class="flex-shrink-0">
-				  <img src="images/space-rainbow.jpg" class="w-64 h-64 xl:w-[500px] xl:h-[500px] rounded-full md:rounded-lg" style="opacity: 1; transform: none; ">
+				<div class="flex flex-col relative text-center md:text-left md:flex-row max-w-7xl px-10 justify-center items-center"
+					style="opacity: 1;">
+					<div class="flex-shrink-0">
+						<img src="images/space-rainbow.jpg"
+							class="w-64 h-64 md:h-[200px] xl:h-[400px] w-auto rounded-full md:rounded-lg"
+							style="opacity: 1; transform: none; ">
+					</div>
+					<div class="space-y-10 px-0 md:px-10 text-center md:text-left">
+						<h4 class="text-4xl font-semibold">A <span class="underline decoration-[#20AAB1]/50">bit
+								of</span> background</h4>
+						<p class="md:text-med margin-right-long">Hello! I'm Jeffrey Pan, a senior studying
+							Computer Science & Mathematics at <a class="text-[#CFAE70]"
+								href="https://www.vanderbilt.edu" target="_blank" rel="noopener noreferrer">Vanderbilt
+								University</a>, while also working towards an M.S. in Computer Science. I have
+							diligently built a solid foundation in <span class="text-[#25b2da] uppercase">Full Stack
+								Development, artificial intelligence, and machine learning</span> and I'm always excited
+							to learn more! Recently, I've taken an interest in <span
+								class="text-[#25b2da] uppercase">Cybersecurity and Mobile Development</span>.</p>
+						<p class="md:text-med margin-right-long">I am driven by a constant desire to learn
+							and grow, and I am always on the lookout for new opportunities to further develop my skills,
+							both professionally and technically. My commitment and passion for programming are evident
+							in the projects, internships, and coursework I have undertaken so far. The field of computer
+							science is always full of possibilities, and I am eager to continue nurturing my abilities
+							to become a more knowledgeable and well-rounded programmer and person.</p>
+					</div>
 				</div>
-				<div class="space-y-10 px-0 md:px-10 text-center md:text-left">
-				  <h4 class="text-4xl font-semibold">A <span class="underline decoration-[#20AAB1]/50">bit of</span> background</h4>
-				  <p class="text-center md:text-med margin-right-long">Hello! I'm Jeffrey Pan, a senior studying Computer Science & Mathematics at <a class="text-[#CFAE70]" href="https://www.vanderbilt.edu" target="_blank" rel="noopener noreferrer">Vanderbilt University</a>, while also working towards an M.S. in Computer Science. I have diligently built a solid foundation in <span class="text-[#25b2da] uppercase">Full Stack Development, artificial intelligence, and machine learning</span> and I'm always excited to learn more! Recently, I've taken an interest in <span class="text-[#25b2da] uppercase">Cybersecurity and Mobile Development</span>.</p>
-				  <p class="text-center md:text-med margin-right-long">I am driven by a constant desire to learn and grow, and I am always on the lookout for new opportunities to further develop my skills, both professionally and technically. My commitment and passion for programming are evident in the projects, internships, and coursework I have undertaken so far. The field of computer science is always full of possibilities, and I am eager to continue nurturing my abilities to become a more knowledgeable and well-rounded programmer and person.</p>
-				</div>
-			  </div>
 			</div>
-		  </article>
-		  
+		</article>
+
 
 
 
