--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<div class="relative rounded-full h-100 w-100 mx-auto overflow-hidden border "
+			<div class="relative rounded-full h-100 w-100 mx-auto border"
 				style="transition: opacity 3s;">
 				<img src="images/space-rainbow-ico.ico" alt="drawn picture"
 					class="absolute inset-0 object-cover w-full h-full">
