--- a/index.html
+++ b/index.html
@@ -95,13 +95,12 @@
 	<!-- Wrapper -->
 	<div id="wrapper">
 
-		
+
 
 
 		<!-- Header -->
 		<header id="header">
-			<div class="relative rounded-full h-100 w-100 mx-auto border"
-				style="transition: opacity 3s;">
+			<div class="relative rounded-full h-100 w-100 mx-auto border" style="transition: opacity 3s;">
 				<img src="images/space-rainbow-ico.ico" alt="drawn picture"
 					class="absolute inset-0 object-cover w-full h-full">
 			</div>
@@ -126,17 +125,16 @@
 
 		<!-- Intro -->
 
-		<div class="space-before-about fade">
+		<div class="space-before-about fade" id="intro">
 			<h2 class="major text-3xl b ">About</h2>
 		</div>
 
-		<article id="intro">
+		<article>
 			<div class="container-split fade flex flex-col">
 				<div class="flex flex-col relative text-center md:text-left md:flex-row max-w-7xl px-10 justify-center items-center"
 					style="opacity: 1;">
-					<div class="flex-shrink-0">
-						<img src="images/space-rainbow.jpg"
-							class="w-64 h-64 md:h-[200px] xl:h-[400px] w-auto rounded-full md:rounded-lg"
+					<div class="image-container w-64 h-64 xl:h-[400px] w-auto ">
+						<img src="images/space-rainbow.jpg" class="rounded-full md:rounded-lg"
 							style="opacity: 1; transform: none; ">
 					</div>
 					<div class="space-y-10 px-0 md:px-10 text-center md:text-left">
@@ -166,12 +164,12 @@
 
 
 
-		<div class="space-before-about fade">
+		<div class="space-before-about fade" id="Work">
 			<h2 class="major text-3xl b">Work</h2>
 		</div>
 
 
-		<div id="Work"
+		<div
 			class="fade top-28 h-10/12 w-full flex space-x-5 overflow-x-scroll p-5 snap-x snap-mandatory scrollbar scrollbar-track-gray-400/20 scrollbar-thumb-[#20AAB1]/30">
 			<article
 				class="flex flex-col rounded-lg items-center space-y-7 flex-shrink-0 w-[250px] md:w-[400px] xl:w-[650px] h-auto snap-center bg-[#292929] p-5 hover:opacity-100 opacity-40 cursor-pointer transition-opacity duration-200 overflow-hidden">
@@ -269,18 +267,230 @@
 
 
 
-
-		<!-- Work -->
-
-
 		<!-- Skills -->
-		<div class="space-before-about">
+		<div class="space-before-about fade" id="skills">
 			<h2 class="major text-3xl b">Skills</h2>
 		</div>
 
-		<article id="skills">
-			<p>Here are my skills!</p>
-		</article>
+		<section id="skills">
+			<div class=" flex relative flex-col text-center md:text-left max-w-[2000px] xl:px-10 min-h-screen max-h-fit justify-center lg:space-y-5 xl:space-y-0 mx-auto items-center"
+				style="opacity: 1;">
+				<h3 class="absolute top-48 uppercase tracking-[20px] text-gray-300 text-2xl">Skills</h3>
+				<h3 class="absolute top-60 uppercase tracking-[3px] text-gray-500 text-sm">Hover for current
+					profieciency</h3>
+				<div class="absolute top-72 grid grid-cols-3 md:grid-cols-4 gap-5 ">
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/d71e495c6a5e627c6e47e08be8da475d8c1d9f68-280x280.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">45%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/706a1efdd1b55d75bd3d578cecba9f00272136a9-221x228.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">50%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/98f8c6142120c10cf54cae263c3b575e2830b246-1822x2048.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">85%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/8e86ebdb50f9e939bfe5f5fcde76986a7dc7b2b2-400x330.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">70%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/5997066cb8cd8c68ae51ee3ba1ef7fc001f83b02-900x500.png?rect=136,0,631,500"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">35%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/df24f3334e1f5785d585babeabe06b5876e7a7d8-500x500.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">45%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/16ba323ef3a287b443c2d8622d28ef5a97b1ec41-2300x2000.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">65%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/789b829dc0882048f9e59729ca5b0589545294e1-200x200.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">75%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/ff00c08760983e0e037aaf6ab4e004f4d147276a-383x383.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">85%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/bcc0a61e607ed8ba00c8063ef64c3ae96d639c5f-512x512.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">60%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/92be0504b38168369d8a9f999d6f8622394dab18-800x600.webp"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">55%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/8b0429a7636a8fc6d0777055cf06a3986679e862-1869x2048.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">65%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/1d3e5962cd7e2871ae663088f007ca7f6245871f-250x278.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">40%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/01cf7a321e6eebcddea8d5a56317d5193891d7d7-1388x1388.svg"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">75%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/68b9be602a95227490b5214a51e45bf42f5ad51f-1200x1200.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">50%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/f06d550daf64c17076d0d61bd2ab80d6a0f5fd0f-512x512.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">40%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/fad4d5e2ed7db23cddf380646f73b0a666d391d5-512x512.png"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">55%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/595715a0cfea0a4738f6d9d74d15a75305d655d1-720x720.webp"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">75%</p>
+							</div>
+						</div>
+					</div>
+					<div class="group relative flex cursor-pointer"><img
+							src="https://cdn.sanity.io/images/o2zb0e1f/production/533f6077360144308cbf7eb91c0670f1e2c6ff59-1280x1280.webp"
+							class=" border-gray-500 object-cover w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 filter group-hover:grayscale transition duration-300 ease-in-out"
+							style="opacity: 1; transform: none;">
+						<div
+							class="absolute opacity-0 group-hover:opacity-80 transition duration-300 ease-in-out group-hover:bg-white w-16 h-16 md:w-24 md:h-24 xl:w-30 xl:h-30 z-0">
+							<div class="flex items-center justify-center h-full">
+								<p class="text-3xl font-bold text-black opacity-100">45%</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 
 
@@ -335,7 +545,7 @@
 		<ul class="icons">
 			<li><a href="https://www.linkedin.com/in/jeffrey-pan-a352491b5/" class="icon brands fa-linkedin"><span
 						class="label">LinkedIn</span></a></li>
-			<li><a href="https://github.com/Ninjasafd" class="icon brands fa-github"><span	
+			<li><a href="https://github.com/Ninjasafd" class="icon brands fa-github"><span
 						class="label">GitHub</span></a></li>
 			<li><a href="mailto:JeffreyPan95@gmail.com" class="icon solid fa-envelope"><span
 						class="label">Mail</span></a></li>
@@ -343,22 +553,24 @@
 		</article>
 
 
-
-
 	</div>
-	
-		<!-- Footer -->
-		<a href="#hero">
-			<footer class="sticky  w-full cursor-pointer slide-up">
-				<div class="flex items-center justify-center"><img
-						class="h-8 w-8 rounded-full filter grayscale hover:grayscale-0 cursor-pointer"
-						src="https://ps.w.org/back-to-the-top-button/assets/icon-256x256.png?rev=2283756"
-						alt="scroll to top"></div>
-			</footer>
-		</a>
+
+	<!-- Footer -->
+	<a href="#hero">
+		<footer class="footer-sticky w-full cursor-pointer slide-up">
+			<div class="flex items-center justify-center"><img
+					class="h-8 w-8 rounded-full filter grayscale hover:grayscale-0 cursor-pointer"
+					src="https://ps.w.org/back-to-the-top-button/assets/icon-256x256.png?rev=2283756"
+					alt="scroll to top"></div>
+		</footer>
+	</a>
 
 	<!-- BG -->
 	<div id="bg"></div>
+
+	<footer class="bottom-space">
+
+	</footer>
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
