--- a/index.html
+++ b/index.html
@@ -96,8 +96,6 @@
 	<div id="wrapper">
 
 		
-
-
 		<!-- Header -->
 		<header id="header">
 			<div class="relative rounded-full h-100 w-100 mx-auto border"
@@ -277,6 +275,157 @@
 		<article class="fade">
 			<p>Here are my skills!</p>
 		</article>
+
+		<section id="skills" class="section scrollspy">
+			<h3 class="page-title white-text teal">Skills</h3>
+			<div class="container">
+			  <div class="card">
+				<div class="card-content">
+				  <h4 class="brown-text light">HTML</h4>
+				  <div class="row text-center">
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/html5.png" class="responsive-img">HTML5
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/react.png" class="responsive-img">JSX
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/haml.png" class="responsive-img">Haml
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/jade.png" class="responsive-img">Jade
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/jekyll.png" class="responsive-img">Jekyll
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-content">
+				  <h4 class="brown-text light">CSS</h4>
+				  <div class="row text-center">
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/css3.png" class="responsive-img">CSS3
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/sass.png" class="responsive-img">SASS
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/bootstrap.png" class="responsive-img">Bootstrap
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/foundation.png" class="responsive-img">Foundation
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/materialize.png" class="responsive-img">Materialize
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-content">
+				  <h4 class="brown-text light">Javascript</h4>
+				  <div class="row text-center">
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/react.png" class="responsive-img">React
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/javascript.png" class="responsive-img">Javascript
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/jquery.png" class="responsive-img">jQuery
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/angular.png" class="responsive-img">Angular
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/nodejs.png" class="responsive-img">Node
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/ionic.png" class="responsive-img">Ionic
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-content">
+				  <h4 class="brown-text light">Back-End</h4>
+				  <div class="row text-center">
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/ruby.png" class="responsive-img">Ruby
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/rails.png" class="responsive-img">Rails
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/minitest.png" class="responsive-img">Minitest
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/postgresql.png" class="responsive-img">PostgreSQL
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/mongodb.png" class="responsive-img">MongoDB
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-content">
+				  <h4 class="brown-text light">Build Tools</h4>
+				  <div class="row text-center">
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/webpack.png" class="responsive-img">Webpack
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/gulp.png" class="responsive-img">Gulp
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/grunt.png" class="responsive-img">Grunt
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/bower.png" class="responsive-img">Bower
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-content">
+				  <h4 class="brown-text light">CMS</h4>
+				  <div class="row text-center">
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/wordpress.png" class="responsive-img">Wordpress
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/tumblr.png" class="responsive-img">Tumblr
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/squarespace.png" class="responsive-img">Squarespace
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-content">
+				  <h4 class="brown-text light">Other</h4>
+				  <div class="row text-center">
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/github.png" class="responsive-img">Github
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/heroku.png" class="responsive-img">Heroku
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/photoshop.png" class="responsive-img">Photoshop
+					</div>
+					<div class="col s4 m2">
+					  <img alt="" src="/assets/img/fcpx.png" class="responsive-img">Final Cut Pro
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </section>
 
 
 
