--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 							</div>
 							<div class="col s4 m2">
 								<img alt=""
-									src="https://i3.cpcache.com/merchandise/632_750x750_Front_Color-White.jpg?Size=3x3&AttributeValue=NA&c=False&region={%22name%22:%22FrontCenter%22,%22width%22:2.857143,%22height%22:2.5,%22alignment%22:%22MiddleCenter%22,%22orientation%22:0,%22dpi%22:200,%22crop_x%22:0,%22crop_y%22:0,%22crop_h%22:400,%22crop_w%22:600,%22scale%22:0,%22template%22:{%22id%22:105206617,%22params%22:{}}}&cid=PUartJBjiF%2Fyg4FdKqiggQ%3D%3D+%7C%7C+65WV8Ig5OF%2FH4W6IdyUAiQ%3D%3D&ProductNo=1815739641"
+									src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/285_R_Project_logo-512.png"
 									class="responsive-img">R
 							</div>
 							<div class="col s4 m2">
