--- a/index.html
+++ b/index.html
@@ -288,9 +288,7 @@
 									class="responsive-img">C++
 							</div>
 							<div class="col s4 m2">
-								<img alt="Swift"
-									src="images/swift-logo-vector.svg"
-									class="responsive-img">Swift
+								<img alt="Swift" src="images/swift-logo-vector.svg" class="responsive-img">Swift
 							</div>
 							<div class="col s4 m2">
 								<img alt=""
